// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H1 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#6bac43",
        "fontSize": 52.2,
        "fontWeight": "700",
        "lineHeight": 54.81,
      },
      Object {},
    ]
  }
>
  "Do all the good you can. By all the means you can. In all the ways you can. In all theplaces you can. At all the times you can. To all the people you can. As long as ever you can." ― John Wesley
</Text>
`;

exports[`the H1 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#6bac43",
        "fontSize": 52.2,
        "fontWeight": "700",
        "lineHeight": 54.81,
      },
      Object {
        "color": "salmon",
      },
    ]
  }
>
  Salmon text
</Text>
`;

exports[`the H1 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#6bac43",
        "fontSize": 52.2,
        "fontWeight": "700",
        "lineHeight": 54.81,
      },
      Object {},
    ]
  }
>
  Default H1 text
</Text>
`;
